# PyDoseRT

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
commissioning/: .gitignore  convert_mcc_to_json.py  convert_of_csv_to_json.py  machine_config_base.json  machine_config_base_vienna.json  run_commissioning_pipeline.py
commissioning/conversion/: convert_asc_to_json.py  convert_mcc_to_asc.py  convert_mcc_to_json.py
commissioning/data/example/: diagonals_10MV.json  output_factors_10MV.json  profiles_10MV.json
commissioning/toolkit/: __init__.py  commissioning_parser.py  commissioning_plotter.py  commissioning_toolkit.py  commissioning_types.py  config.py
example_data/: water_patient.npz  water_phantom.npz
examples/: data_loading.ipynb  direct_optimization.ipynb  dlmodel.ipynb  kernels.ipynb  optimization.ipynb  pbkernel.ipynb  phantom.ipynb  phantom_voxel_sizes.ipynb  rtplan.ipynb  rtplan_test_1arc.ipynb  testing.ipynb
examples/calibration/: calibration_1_penumbra.ipynb  calibration_2_head_scatter.ipynb  calibration_3_profile_correction.ipynb  calibration_4_output_factor.ipynb  calibration_5_dose_scaling.ipynb
examples/commissioning/: machine_config_complete.json  machine_config_step1.json  machine_config_step2.json  run_commissioning_pipeline.py
examples/commissioning/HeroDoseCalc/: __init__.py  commissioning_parser.py  commissioning_plotter.py  commissioning_toolkit.py  data.py  engine.py  fluence.py  hardware.py  nyholm.py  visualization.py
scripts/: compare_umea_plans.py  dose_tests.py  export_plan_test.py  gold_atlas_test.py  remote_script.sh  rtplan_test_1arc.py  rtplan_test_four_field.py  rtplan_test_water_stuff.py  run_remote.sh  static_optimize_umea.py  test_lots_of_beams.py  vienna_test.py
src/pydose_rt/: __init__.py
src/pydose_rt/data/: beam.py  loaders.py  machine_config.py  patient.py
src/pydose_rt/engine/: dose_engine.py
src/pydose_rt/geometry/: projections.py  rotations.py
src/pydose_rt/layers/: BeamValidationLayer.py  FluenceMapLayer.py  FluenceVolumeLayer.py  RadiologicalDepthLayer.py
src/pydose_rt/objectives/: losses.py
src/pydose_rt/utils/: utils.py
src/pydosert/: __init__.py
src/pydosert/data/: __init__.py  beam.py  loaders.py  machine_config.py  optimization_config.py  patient.py
src/pydosert/engine/: dose_engine.py  photon_base_engine.py
tests/: conftest.py
tests/benchmarks/: test_benchmark_dose_engine.py  test_benchmark_fluence_map_layer.py  test_benchmark_fluence_volume_layer.py  test_benchmark_pencil_beam_kernel_layer.py  test_benchmark_radiological_depth_layer.py
tests/smoketests/: test_real_rtplan.py
tests/unittests/: test_beam.py  test_beam_rotation_layer.py  test_beam_validation_layer.py  test_beam_wise_convolutional_layer.py  test_dose_engine.py  test_fluence_map_layer.py  test_fluence_volume_layer.py  test_geometry.py  test_pencil_beam_kernel_layer.py  test_pencil_beam_kernel_model.py  test_radiological_depth_layer.py
(+38 files in other folders)
